<resources>
    <string name="app_name">体育选课</string>
    <string name="selectCourseActivity_title">可选课程</string>
    <string name="course_level">课程等级</string>
    <string name="tv_level">1</string>
    <string name="tv_week">星期一</string>
    <string name="tv_classTime">0:00~00:00</string>
    <string name="tv_teacher">teacher</string>
    <string name="tv_studentLeft">7</string>
    <string name="tv_course_name">tv_course_name</string>
    <string name="hint_account">账号</string>
    <string name="hint_password">密码</string>
    <string name="test">测试字符串</string>
    <string name="student_account">3151611079</string>
    <string name="name">聂军</string>
    <string name="teacher_account">1000002</string>
    <string name="password">123456</string>
    <string name="testLong">这里是一串用于测试的文字,这里是一串用于测试的文字,这里是一串用</string>
    <string name="testShort">测试的文字</string>

</resources>
