<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="32dp"
    android:paddingLeft="32dp"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_marginTop="56dp"
        android:background="@color/colorPrimary"
        android:layout_width="56dp"
        android:layout_height="56dp" />

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/app_name"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editLayout_account"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:theme="@style/BlueEditText"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_account"
            android:theme="@style/BlueEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/hint_account"
            android:text="2013116001"
            android:inputType="number"
            android:maxLength="10"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editLayout_password"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:theme="@style/BlueEditText"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_password"
            android:theme="@style/BlueEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/hint_password"
            android:maxLines="1"
            android:text="123456"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/user_radioGroup"
        android:layout_marginTop="16dp"
        android:layout_gravity="left"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/student"
            android:checked="true"
            android:text="学生"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:layout_marginLeft="16dp"
            android:id="@+id/teacher"
            android:text="教师"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <Button
        android:id="@+id/login_button"
        android:text="登陆"
        android:layout_marginTop="24dp"
        android:background="@drawable/radius_button"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_gravity="left"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="忘记密码？"
        android:textColor="#990d4b68"
        android:textSize="14sp"/>

</LinearLayout>